--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           aws-region: eu-west-1 
 
       - name: Deploy to S3
-        run: aws s3 sync . s3://pgcreu19bis --delete --exclude ".github/*"
+        run: aws s3 sync . s3://pgcreu19bis.com --delete --exclude ".github/*"
